# rules_vsg

./: .bazelignore  .bazelrc  .gitignore  404.html  BUILD.bazel  README.md  WORKSPACE.bazel  index.html  print.html  rules.html  searchindex.js  searchindex.json  toc.html  toc.js  version.bzl  vsg_aspect.html  vsg_fixer.html  vsg_test.html  vsg_toolchain.html
.bcr/: metadata.template.json  source.template.json
.github/: release_notes.template
.github/workflows/: ci.yml  compile-requirements.yaml  docs.yaml  lint.yml  release.yaml
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  index.md  rules.md
examples/simple/: .bazelrc  BUILD.bazel  MODULE.bazel  vsg_config.yaml
examples/simple/requirements/: BUILD.bazel  requirements_macos_aarch64.txt
examples/simple/src/: unformatted.vhd
examples/simple/toolchains/: BUILD.bazel
tests/: BUILD.bazel  vsg_config.yaml
tests/src/: adder.vhd  math_pkg.vhd
tools/: BUILD.bazel
tools/repo_version/: version_test.py
tools/requirements/: BUILD.bazel  requirements_linux_aarch64.txt  requirements_linux_x86_64.txt  requirements_windows_x86_64.txt
tools/toolchains/: BUILD.bazel
vsg/: BUILD.bazel  default_config.yaml  defs.bzl  vsg_aspect.bzl  vsg_fixer.bzl  vsg_test.bzl  vsg_toolchain.bzl
vsg/private/: BUILD.bazel  vsg.bzl  vsg_fixer.py  vsg_runner.py  vsg_toolchain.bzl
