load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@rules_rust_mdbook//:defs.bzl", "mdbook", "mdbook_server")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

stardoc(
    name = "vsg_test_doc",
    out = "src/vsg_test.md",
    input = "//vsg:vsg_test.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//vsg:bzl_lib"],
)

stardoc(
    name = "vsg_fixer_doc",
    out = "src/vsg_fixer.md",
    input = "//vsg:vsg_fixer.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//vsg:bzl_lib"],
)

stardoc(
    name = "vsg_aspect_doc",
    out = "src/vsg_aspect.md",
    input = "//vsg:vsg_aspect.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//vsg:bzl_lib"],
)

stardoc(
    name = "vsg_toolchain_doc",
    out = "src/vsg_toolchain.md",
    input = "//vsg:vsg_toolchain.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//vsg:bzl_lib"],
)

mdbook(
    name = "book",
    srcs = glob(["src/**/*.md"]) + [
        ":vsg_aspect_doc",
        ":vsg_fixer_doc",
        ":vsg_test_doc",
        ":vsg_toolchain_doc",
    ],
    book = "book.toml",
    # Windows builds are typically super slow in CI so they're avoided.
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

alias(
    name = "docs",
    actual = ":book",
    tags = ["manual"],
)

mdbook_server(
    name = "server",
    book = ":book",
    tags = ["manual"],
)

sh_binary(
    name = "publish_book",
    srcs = ["publish_book.sh"],
    data = [":book"],
    env = {"BOOK_DIR": "$(rootpath :book)"},
    tags = ["manual"],
)
