load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_venv//python:defs.bzl", "py_library")

exports_files([
    "vsg_runner.py",
    "vsg_fixer.py",
])

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//vsg:__subpackages__"],
    deps = [
        "@rules_venv//python:bzl_lib",
        "@rules_venv//python/venv:bzl_lib",
        "@rules_vhdl//vhdl:defs_bzl",
    ],
)

py_library(
    name = "vsg_runner",
    srcs = ["vsg_runner.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//vsg:current_vsg_toolchain",
        "@rules_venv//python/runfiles",
    ],
)

py_library(
    name = "vsg_fixer_lib",
    srcs = ["vsg_fixer.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//vsg:current_vsg_toolchain",
        "@rules_venv//python/runfiles",
    ],
)
